[package]
name = "absorb_images"
version = "0.1.0"
authors = ["sabinote <github@sabinote.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0", features = ["full"] }
reqwest = { version = "0.10.8" } 
image = "0.23.10"
tempfile = "3.1.0"
regex = "1"
chrono = "0.4.19"
